--- a/database/upload-report-two.rmd
+++ b/database/upload-report-two.rmd
@@ -22,43 +22,38 @@ comma <- function(x) format(x, digits = 2, big.mark = ",")
 print_if_exists <- function(object) {
 	obj_nam <- deparse(substitute(object))
 	if (exists(obj_nam)) {
-		print(object)
+		return(object)
 	} else {
 		print(paste(obj_nam, "isn't present"))
 	}
 }
 ```
 
-## If results below are ok then follow these steps
+## Checklist
 
-1. If EFO term not present then go to `r out_dir` and add it to `r print("studies.txt")` 
-2. Run bash update-database
-
-## If results below are not ok then 
-
-1. Report back to the User
-2. Remove files not needed
-
-Here is a report for the files in: `r res_dir`.
+1. Range of summary statistics are reasonable, e.g. standard errors aren't all above 1000.
+2. Number of associations are reasonable.
+3. The EFO term is present. This will need to be filled in if not.
+4. Array entered and number of rows in results matches.
+5. If trait has well established cpg-trait associations, they are present in top hits (e.g. cg05575921 is present for smoking EWAS).
 
 ## Summary of results
 
 * P-value range: `r paste(comma(range(full_results$P)), collapse = ", ")`
 * N sites with P<1e-7: `r n_p7`
 * N sites with P<1e-4: `r n_p4`
-* SE is above 0: `r all(full_results$SE > 0)`
 * SE range is `r range(full_results$SE)`
+* Number of effect estimate outliers: `r length(beta_out)`
 * EFO term is present: `r !is.na(studies$EFO)`
+* Array: `r studies$Methylation_Array`
+* Rows in results: `r nrow(results)` 
 
 ## P-values
 
 Here is a look at the top 10 strongest associations in your results (ordered by p-value):
 
 ```{r results-check, results="asis"}
-top_hits <- full_results[order(full_results$P), ]
-top_hits <- top_hits[1:10, ]
 pander(top_hits)
-# head(top_hits)
 ```
 
 ```{r man-plot, results="asis"}
@@ -72,9 +67,9 @@ print_if_exists(qq.plot)
 ## Beta + SE distributions
 
 ```{r beta-histogram, results="asis"}
-print_if_exists(beta_hist)
+if (betas_present) hist(full_results$Beta)
 ```
 
 ```{r se-histogram, results="asis"}
-print_if_exists(se_hist)
+if (se_present) hist(full_results$SE)
 ```
