--- a/database/upload-report-one.rmd
+++ b/database/upload-report-one.rmd
@@ -30,6 +30,7 @@ Checks passed:
 * Character length of values in columns were not too large
 * P-values are between 0 and 1
 * Values in CpG column of the results file (`r rfile`) look like CpGs
+* Standard errors are positive (if present)
 
 Here is a look at the top 10 strongest associations in your results (ordered by p-value)
 
